--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -6,6 +6,63 @@ body {
     line-height: 14px;
 }
 
+header {
+    height: 100vh;
+    h1 {
+        font-family: SF Pro Display;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 64px;
+        line-height: 76px;
+    }
+    .description {
+        font-family: SF Pro Display;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 29px;
+        text-align: center;
+    }
+}
+article {
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    .figure {
+        width: 50vw;
+        height: 100%;
+    }
+    .text-container {
+        width: 50vw;
+        height: 100%;
+        .text {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 100px;
+            h1 {
+                font-family: SF Pro Display;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 64px;
+                line-height: 76px;
+            }
+            .bold {
+                font-family: SF Pro Display;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 24px;
+                line-height: 29px;
+            }
+            p {
+                font-family: SF Pro Display;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 18px;
+                line-height: 21px;
+            }
+        }
+    }
+}
 canvas {
     width: 300px;
     height: 300px;
