--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -34,6 +34,8 @@
 
 		gtag('config', 'UA-XXXXXXX-Y');
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/glottologist@1.0.10/dist/glottologist.min.js"></script>
+	<script src="{{site.url}}/js/landing.js"></script>
 	<script src="{{site.url}}/js/functions.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sf-font@1.0.0/stylesheet.min.css">
 </body>
