--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -25,20 +25,52 @@ header {
     }
 }
 article {
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
+    height: auto;
     .figure {
-        width: 50vw;
-        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        .step {
+            width: 57vw;
+            height: 100vh;
+        }
+        #step-1 {
+            background-image: url("../img/step1.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+        #step-2 {
+            background-image: url("../img/step2.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+        #step-2-5 {
+            background-image: url("../img/step2-5.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+        #step-3 {
+            background-image: url("../img/step3.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+        #step-4 {
+            background-image: url("../img/step4.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
     }
     .text-container {
-        width: 50vw;
-        height: 100%;
+        height: calc(5*100vh);
+        position: absolute;
+        top: 100vh;
+        left: 60vw;
         .text {
             position: -webkit-sticky;
             position: sticky;
             top: 100px;
+            width: 450px;
+            max-width: calc(40vw - 20px);
             h1 {
                 font-family: SF Pro Display;
                 font-style: normal;
