--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -6,8 +6,18 @@ body {
     line-height: 14px;
 }
 
+html {
+    overflow-x: hidden
+}
+
 header {
+    margin: 0;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     h1 {
         font-family: SF Pro Display;
         font-style: normal;
@@ -15,7 +25,9 @@ header {
         font-size: 64px;
         line-height: 76px;
     }
+
     .description {
+        max-width: 960px;
         font-family: SF Pro Display;
         font-style: normal;
         font-weight: 600;
@@ -24,77 +36,139 @@ header {
         text-align: center;
     }
 }
+
 article {
     height: auto;
+
     .figure {
         position: relative;
         display: flex;
         flex-direction: column;
+
         .step {
             width: 57vw;
             height: 100vh;
         }
+
         #step-1 {
             background-image: url("../img/step1.svg");
             background-size: contain;
             background-repeat: no-repeat;
         }
+
         #step-2 {
             background-image: url("../img/step2.svg");
             background-size: contain;
             background-repeat: no-repeat;
         }
+
         #step-2-5 {
             background-image: url("../img/step2-5.svg");
             background-size: contain;
             background-repeat: no-repeat;
         }
+
         #step-3 {
             background-image: url("../img/step3.svg");
             background-size: contain;
             background-repeat: no-repeat;
         }
+
         #step-4 {
             background-image: url("../img/step4.svg");
             background-size: contain;
             background-repeat: no-repeat;
         }
     }
-    .text-container {
-        height: calc(5*100vh);
-        position: absolute;
-        top: 100vh;
-        left: 60vw;
-        .text {
-            position: -webkit-sticky;
-            position: sticky;
-            top: 100px;
-            width: 450px;
-            max-width: calc(40vw - 20px);
-            h1 {
-                font-family: SF Pro Display;
-                font-style: normal;
-                font-weight: bold;
-                font-size: 64px;
-                line-height: 76px;
+}
+
+.text-container {
+    height: calc(5*100vh);
+    position: absolute;
+    top: 100vh;
+    left: 60vw;
+    z-index: auto;
+    .text {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 100px;
+        width: 450px;
+        max-width: calc(40vw - 20px);
+
+        h1 {
+            font-family: SF Pro Display;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 64px;
+            line-height: 76px;
+        }
+
+        .bold {
+            font-family: SF Pro Display;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 29px;
+        }
+
+        p {
+            font-family: SF Pro Display;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 21px;
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    h1 {
+        font-size: 44px !important;
+        line-height: 51px !important;
+        margin: 0 !important;
+        margin-bottom: 10px !important;
+    }
+
+    header .description {
+        font-size: 16px;
+        line-height: 21px;
+    }
+
+    article {
+        .figure {
+            .step {
+                width: 90vw;
             }
-            .bold {
-                font-family: SF Pro Display;
-                font-style: normal;
-                font-weight: 600;
-                font-size: 24px;
-                line-height: 29px;
-            }
-            p {
-                font-family: SF Pro Display;
-                font-style: normal;
-                font-weight: 500;
-                font-size: 18px;
-                line-height: 21px;
+        }
+        .text-container {
+            position: absolute;
+            top: 100vh;
+            left: 0;
+            .text {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 40vh;
+                margin-left: 10px;
+                width: calc(100vw - 60px);
+                height: calc(60vh - 40px);
+                max-width: 100vw;
+                background: #E8E8E8;
+                border-radius: 25px;
+                padding: 15px;
+                
+                .bold {
+                    font-size: 18px;
+                    line-height: 21px;
+                }
+                p {
+                    font-size: 14px;
+                    line-height: 17px;
+                }
             }
         }
     }
 }
+
 canvas {
     width: 300px;
     height: 300px;
@@ -139,6 +213,7 @@ canvas {
         .value {
             text-align: right;
             color: #4c4c4c;
+
             &.show {
                 color: #007aff;
                 cursor: pointer;
