--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -23,21 +23,22 @@
 
 	{{content}}
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-Y"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-XXXXXXX-Y');
-	</script>
 	<script src="https://cdn.jsdelivr.net/npm/glottologist@1.0.10/dist/glottologist.min.js"></script>
 	<script src="{{site.url}}/js/landing.js"></script>
-	<script src="{{site.url}}/js/functions.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sf-font@1.0.0/stylesheet.min.css">
+
+	<!-- Sven Rech's work -->
+	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/sjcl.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/core/codecBytes.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/core/ctr.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/core/hkdf.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
+	<script defer src="{{site.url}}/js/dp3t.js"></script>
+	<script defer src="{{site.url}}/js/ContactTracing.js"></script>
+
+	<!-- Animation -->
+	<script defer src="https://cdn.jsdelivr.net/npm/@arguiot/broadcast.js@1.0.0/dist/broadcast.min.js"></script>
+	<script defer src="{{site.url}}/js/functions.js"></script>
 </body>
 
 </html>
