--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -21,6 +21,7 @@
         --semi-white: #333;
     }
 }
+
 @media (prefers-color-scheme: dark) and (max-width: 960px) {
     article {
         .text {
@@ -28,6 +29,7 @@
         }
     }
 }
+
 body {
     font-family: SF Pro Display;
     font-style: normal;
@@ -50,13 +52,14 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+
     .text {
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    
+
         .logo {
             background: url("../img/logo.svg");
             background-size: contain;
@@ -64,6 +67,7 @@ header {
             width: 960px;
             height: 125px;
         }
+
         h1 {
             font-family: SF Pro Display;
             font-style: normal;
@@ -73,7 +77,7 @@ header {
             text-align: left;
             max-width: 960px;
         }
-    
+
         .description {
             max-width: 960px;
             font-family: SF Pro Display;
@@ -84,6 +88,7 @@ header {
             text-align: left;
         }
     }
+
     .illustration {
         width: 500px;
         height: 500px;
@@ -95,7 +100,6 @@ header {
 
 article {
     height: auto;
-
     .figure {
         position: relative;
         display: flex;
@@ -144,6 +148,7 @@ article {
     top: 100vh;
     left: 60vw;
     z-index: auto;
+
     .text {
         position: -webkit-sticky;
         position: sticky;
@@ -176,6 +181,7 @@ article {
         }
     }
 }
+
 .animation {
     margin: 0;
     height: 100vh;
@@ -183,12 +189,14 @@ article {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     h1 {
         font-family: SF Pro Display;
         font-style: normal;
         font-weight: bold;
         font-size: 64px;
         line-height: 76px;
+        text-align: center;
     }
 
     .bold {
@@ -203,11 +211,12 @@ article {
 
     .app {
         margin-top: 10px;
+
         canvas {
             width: 300px;
             height: 300px;
         }
-        
+
         .selector {
             margin-top: 10px;
             display: flex;
@@ -220,6 +229,7 @@ article {
             background: #c4c4c4;
             border-radius: 5px;
             color: black;
+
             div {
                 width: 120px;
                 height: 28px;
@@ -227,18 +237,20 @@ article {
                 line-height: 28px;
                 transition: 100ms ease-in-out;
             }
-        
+
             .active {
                 background: #ffffff;
                 border-radius: 5px;
             }
         }
-        
+
         .panel {
             height: 300px;
+
             .selector {
                 margin-top: 0px;
             }
+
             .row {
                 width: 296px;
                 padding: 0 2px;
@@ -246,11 +258,11 @@ article {
                 flex-direction: row;
                 justify-content: space-between;
                 margin-top: 13px;
-        
+
                 .value {
                     text-align: right;
                     color: #4c4c4c;
-        
+
                     &.show {
                         color: #007aff;
                         cursor: pointer;
@@ -258,10 +270,10 @@ article {
                 }
             }
         }
-        
+
         .control {
             height: 300px;
-        
+
             .row {
                 width: 296px;
                 padding: 0 2px;
@@ -269,7 +281,7 @@ article {
                 flex-direction: row;
                 justify-content: space-between;
                 padding-top: 13px;
-        
+
                 .value {
                     text-align: right;
                     color: #4c4c4c;
@@ -282,6 +294,7 @@ article {
             }
         }
     }
+
     .scientist {
         position: absolute;
         bottom: calc(-6*100vh);
@@ -294,6 +307,7 @@ article {
         width: 50vw;
         z-index: -10;
     }
+
     .sitting {
         position: absolute;
         bottom: calc(-6*100vh);
@@ -308,18 +322,44 @@ article {
     }
 }
 
-@media (max-width: 960px) {
-    h1 {
-        font-size: 36px !important;
-        line-height: 45px !important;
-        margin: 0 !important;
-        margin-bottom: 10px !important;
+@media (max-width: 1470px) {
+    article {
+        margin-top: 500px;
     }
+    .text-container {
+        top: calc(100vh + 500px);
+    }
+    .animation {
+        .scientist, .sitting {
+            bottom: calc(-6*100vh - 500px);
+        }
+    }
+}
 
-    header .description {
-        font-size: 12px;
-        line-height: 16px;
-        max-width: 500px;
+@media (max-width: 960px) {
+    header {
+        .text {
+            .logo {
+                max-width: 500px !important;
+                width: 90vw;
+            }
+            h1 {
+                font-size: 36px !important;
+                line-height: 45px !important;
+                margin: 0 !important;
+                margin-bottom: 10px !important;
+                max-width: 500px !important;
+                width: 90vw;
+            }
+        
+            .description {
+                font-size: 12px !important;
+                line-height: 16px !important;
+                max-width: 500px !important;
+                width: 90vw;
+                text-align: justify !important;
+            }
+        }
     }
 
     article {
@@ -328,10 +368,12 @@ article {
                 width: 90vw;
             }
         }
+
         .text-container {
             position: absolute;
-            top: 100vh;
+            top: calc(100vh + 500px);
             left: 0;
+
             .text {
                 position: -webkit-sticky;
                 position: sticky;
@@ -340,17 +382,18 @@ article {
                 width: calc(100vw - 60px);
                 height: calc(60vh - 40px);
                 max-width: 100vw;
-                background: rgba(232, 232, 232,0.7);
+                background: rgba(232, 232, 232, 0.7);
                 -webkit-backdrop-filter: saturate(180%) blur(10px);
                 backdrop-filter: saturate(180%) blur(10px);
 
                 border-radius: 25px;
                 padding: 15px;
-                
+
                 .bold {
                     font-size: 18px;
                     line-height: 21px;
                 }
+
                 p {
                     font-size: 14px;
                     line-height: 17px;
@@ -358,8 +401,10 @@ article {
             }
         }
     }
+
     .animation {
         justify-content: start !important;
+
         .bold {
             width: 100vw !important;
             max-width: 350px !important;
@@ -389,6 +434,7 @@ article {
         height: 600px;
         background: white;
         border-radius: 15px;
+
         .cross {
             background: url("../img/cross.svg");
             background-size: cover;
@@ -400,6 +446,7 @@ article {
             z-index: 10;
             cursor: pointer;
         }
+
         .title {
             font-family: SF Pro Display;
             font-style: normal;
@@ -410,6 +457,7 @@ article {
             position: relative;
             top: -15px;
         }
+
         .container {
             overflow-y: scroll;
             margin-left: 10px;
@@ -417,12 +465,14 @@ article {
             max-width: calc(450px - 20px);
             height: calc(100vh - 69px);
             max-height: calc(600px - 69px);
+
             .row {
                 padding: 0 2px;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 padding-top: 13px;
+
                 .value {
                     text-align: right;
                     color: #4c4c4c;
