--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -8,8 +8,10 @@
 	<meta name="description" content="{{page.description}}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="{{site.url}}/favicon.ico">
-	<link rel="apple-touch-icon" href="{{site.url}}/icon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="https://unpkg.com/normalize.css">
