--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -28,6 +28,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/glottologist@1.0.10/dist/glottologist.min.js"></script>
 	<script src="{{site.url}}/js/landing.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sf-font@1.0.0/stylesheet.min.css">
+	<script defer src="https://cdn.jsdelivr.net/npm/lunar-icons@2.1.2/dist/lunar-icons.min.js"></script>
 
 	<!-- Sven Rech's work -->
 	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/sjcl.min.js"></script>
