--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -26,7 +26,9 @@
 	{{content}}
 
 	<script src="https://cdn.jsdelivr.net/npm/glottologist@2.0.1/dist/glottologist.min.js"></script>
-	<script src="{{site.url}}/js/landing.js"></script>
+	<script src="{{site.url}}/js/locales.js"></script>
+
+	<script defer src="{{site.url}}/js/landing.js"></script>
 
 	<!-- Sven Rech's work -->
 	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/sjcl.min.js"></script>
