--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -46,6 +46,9 @@
 	<!-- Async ressources -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sf-font@1.0.0/stylesheet.min.css">
 	<script async src="https://cdn.jsdelivr.net/npm/lunar-icons@2.1.2/dist/lunar-icons.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/js/shepherd.min.js"></script>
+	<script defer src="{{site.url}}/js/tutorial.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/css/shepherd.css">
 </body>
 
 </html>
