Changed text for the panel

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -561,6 +561,7 @@ article {
                 padding-top: 13px;
 
                 .value {
+                    margin-left: 20px;
                     text-align: right;
                     color: #4c4c4c;
                 }
