Fixed popup style

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -509,7 +509,7 @@ article {
         width: 100vw;
         height: 100vh;
         max-width: 450px;
-        height: 600px;
+        max-height: 600px;
         background: white;
         border-radius: 15px;
 
