--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -8,6 +8,9 @@
     --gray: #4c4c4c;
     --semi-white: #eee;
     --blue: #1277EB;
+    // Fonts
+    --font-sans: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    --font-mono: 'SFMono-Light', 'SF Mono', 'Ubuntu Mono', Consolas, 'DejaVu Sans Mono', Menlo, monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -36,7 +39,7 @@
 }
 
 body {
-    font-family: SF Pro Display;
+    font-family: var(--font-sans);
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -74,7 +77,7 @@ header {
         }
 
         h1 {
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: bold;
             font-size: 64px;
@@ -85,7 +88,7 @@ header {
 
         .description {
             max-width: 960px;
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: 600;
             font-size: 24px;
@@ -163,7 +166,7 @@ article {
         max-width: calc(40vw - 20px);
 
         h1 {
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: bold;
             font-size: 64px;
@@ -171,7 +174,7 @@ article {
         }
 
         .bold {
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: 600;
             font-size: 24px;
@@ -179,11 +182,14 @@ article {
         }
 
         p {
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: 500;
             font-size: 18px;
             line-height: 21px;
+            code {
+                font-family: var(--font-mono);
+            }
         }
     }
 }
@@ -196,7 +202,7 @@ article {
     align-items: center;
 
     h1 {
-        font-family: SF Pro Display;
+        font-family: var(--font-sans);
         font-style: normal;
         font-weight: bold;
         font-size: 64px;
@@ -206,7 +212,7 @@ article {
 
     .bold {
         max-width: 460px;
-        font-family: SF Pro Display;
+        font-family: var(--font-sans);
         font-style: normal;
         font-weight: 600;
         font-size: 24px;
@@ -314,7 +320,7 @@ article {
     footer {
         height: 300px;
         text-align: center;
-        font-family: SF Pro Display;
+        font-family: var(--font-sans);
         font-style: normal;
         font-size: 24px;
         line-height: 29px;
@@ -532,7 +538,7 @@ article {
         }
 
         .title {
-            font-family: SF Pro Display;
+            font-family: var(--font-sans);
             font-style: normal;
             font-weight: bold;
             font-size: 24px;
@@ -551,7 +557,7 @@ article {
             max-height: calc(600px - 69px);
 
             .center {
-                font-family: SF Pro Display;
+                font-family: var(--font-sans);
                 font-style: normal;
                 font-weight: bold;
                 font-size: 24px;
