--- a/src/_layouts/html.html
+++ b/src/_layouts/html.html
@@ -14,7 +14,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 
 	<!-- stylesheets -->
-	<link rel="stylesheet" href="https://unpkg.com/normalize.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="{{site.url}}/css/main.css">
 </head>
 
