--- a/src/_layouts/html.html
+++ b/src/_layouts/html.html
@@ -41,7 +41,7 @@
 
 	<!-- Async ressources -->
 	<script async src="https://cdn.jsdelivr.net/npm/lunar-icons@2.1.2/dist/lunar-icons.min.js"></script>
-	<script defer src="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/js/shepherd.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/js/shepherd.min.js"></script>
 	<script defer src="{{site.url}}/js/tutorial.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/css/shepherd.css">
 </body>
