Fixed a bit the locales

--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -78,7 +78,7 @@ header {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: start;
 
         .logo {
             background: url("../img/logo.svg");
