Adding GTag for analytics

--- a/src/_layouts/html.html
+++ b/src/_layouts/html.html
@@ -44,6 +44,18 @@
 	<script src="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/js/shepherd.min.js"></script>
 	<script defer src="{{site.url}}/js/tutorial.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shepherd.js@7.1.5/dist/css/shepherd.css">
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DZS81ZXXD4"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'G-DZS81ZXXD4');
+	</script>
 </body>
 
 </html>
