--- a/src/_layouts/html.html
+++ b/src/_layouts/html.html
@@ -7,6 +7,7 @@
 	<title>{{page.title}}</title>
 	<meta name="description" content="{{page.description}}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-site-verification" content="o5_N2qDzGSZV5Wme87oTM2qEylyQVSJMeE3k6RKti28" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
