Justify step text
It just makes the block a bit nicer

--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -176,6 +176,7 @@ article {
         top: 100px;
         width: 450px;
         max-width: calc(40vw - 20px);
+        text-align: justify;
 
         h1 {
             font-family: var(--font-sans);
