Making walkthrough button a bit more visible

--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -256,7 +256,7 @@ article {
     }
 
     .walkthrough {
-        background: #196fcc;
+        background: var(--blue);
         color: white;
         font-weight: 600;
         font-size: 24px;
