Added OG + FR press kit

--- a/src/_layouts/html.html
+++ b/src/_layouts/html.html
@@ -17,6 +17,13 @@
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="{{site.url}}/css/main.css">
+
+	<meta property="og:title" content="Corona Tracing Animation">
+	<meta property="og:description" content="A web experiment to demonstrate how decentralized tracing protocol works.">
+	<meta property="og:image" content="https://corona-tracing.cryptool.org/img/banner.jpg">
+	<meta property="og:site_name" content="CrypTool">
+	<meta property="og:url" content="https://corona-tracing.cryptool.org">
+	<meta property="og:type" content="website">
 </head>
 
 <body>
