--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -96,7 +96,7 @@ header {
             font-weight: bold;
             font-size: 64px;
             line-height: 76px;
-            text-align: justify;
+            // text-align: justify;
             max-width: 900px;
         }
 
