--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -24,7 +24,7 @@
         --semi-white: #333;
     }
 
-    header .logo {
+    header.landing .logo {
         background: url("../img/logo-white.svg") !important;
         background-size: contain !important;
         background-repeat: no-repeat !important;
@@ -66,7 +66,7 @@ html {
     }
 }
 
-header {
+header.landing {
     margin: 0;
     height: 100vh;
     display: flex;
@@ -418,7 +418,7 @@ article {
 }
 
 @media (max-width: 960px) {
-    header {
+    header.landing {
         .text {
             .logo {
                 max-width: 500px !important;
