Added legal links

--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -369,6 +369,15 @@ article {
 
         small {
             opacity: .4;
+            &.legal {
+                opacity: 1;
+                font-size: 12px;
+                line-height: 16px;
+                color: var(--blue);
+                a {
+                    margin: 5px;
+                }
+            }
         }
     }
 
